# QFleet

./: CMakeLists.txt  readme.md
.github/workflows/: cmake-multi-platform.yml
Components/: CMakeLists.txt  qfleet_arc.h  qfleet_armor.h  qfleet_assettype.h  qfleet_bgt.h  qfleet_data.cpp  qfleet_faction.cpp  qfleet_faction.h  qfleet_lock.h  qfleet_opttype.h  qfleet_ship.h  qfleet_statid.h  qfu_specialrules.cpp
Fleetbuilder/: initlistdialog.ui  mainwindow.cpp  qflw_list.cpp
Hangarbay/: hangar.cpp  hangar.ui
QFT_Components/: CMakeLists.txt  qfleet_arc.cpp  qfleet_arc.h  qfleet_armor.h  qfleet_launchprofile.h  qfleet_lock.h  qfleet_option.cpp  qfleet_option.h  qfleet_opttype.h  qfleet_tonnage.cpp  qfleet_tonnage.h  qfleet_weapon.h  qft_component.h  qft_enum.h
QFleet/: CMakeLists.txt
QFleet/Components/: CMakeLists.txt  qfleet_arc.cpp  qfleet_arc.h  qfleet_armor.cpp  qfleet_armor.h  qfleet_assettype.cpp  qfleet_assettype.h  qfleet_battlegrouptype.cpp  qfleet_battlegrouptype.h  qfleet_bgt.cpp  qfleet_bgt.h  qfleet_faction.cpp  qfleet_faction.h  qfleet_launchasset.cpp  qfleet_launchasset.h  qfleet_launchprofile.cpp  qfleet_launchprofile.h  qfleet_lock.cpp  qfleet_lock.h  qfleet_option.cpp  qfleet_option.h  qfleet_opttype.cpp  qfleet_opttype.h  qfleet_ship.cpp  qfleet_ship.h  qfleet_ship_fleet.cpp  qfleet_ship_fleet.h  qfleet_ship_shipyard.cpp  qfleet_ship_shipyard.h  qfleet_statid.cpp  qfleet_statid.h  qfleet_tonnage.cpp  qfleet_tonnage.h  qfleet_weapon.cpp  qfleet_weapon.h  qft_component.h  qft_enum.h  qfu_specialrules.cpp  qfu_specialrules.h
QFleet/Fleetbuilder/: CMakeLists.txt  admiralselectdialog.cpp  admiralselectdialog.h  admiralselectdialog.ui  battlegroup.cpp  battlegroup.h  battlegroup.ui  card.cpp  card.h  card.ui  confirmdialog.cpp  confirmdialog.ui  group.ui  groupribbon.cpp  groupribbon.h  groupribbon.ui  initlistdialog.ui  limitwidget.cpp  limitwidget.h  limitwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newfleet.cpp  newfleet.h  newfleet.ui  optselect.cpp  optselect.h  optselect.ui  qflw_battlegroup.cpp  qflw_battlegroup.h  qflw_battlegroup.ui  qflw_group.cpp  qflw_group.h  qflw_group.ui  qflw_list.cpp  qflw_list.h  qflw_list.ui  shipHook.h  shipselect.cpp  (+5 more)
QFleet/Hangarbay/: CMakeLists.txt  hangar.cpp  hangar.h  hangar.ui  main.cpp
QFleet/Hangarbay/build-Hangar-gcc12-Debug/.qtc_clangd/: compile_commands.json
QFleet/ListParts/: CMakeLists.txt  qfleet_battlegroup.cpp  qfleet_battlegroup.h  qfleet_cost.cpp  qfleet_cost.h  qfleet_group.cpp  qfleet_group.h  qfleet_list.cpp  qfleet_list.h
QFleet/ListPrinter/: CMakeLists.txt  NLTemplate.cpp  listprinter.cpp  listprinter.h  listprinter_functions.cpp  listprinter_functions.h  listprinter_legacy.cpp  listprinter_legacy.h  listprinter_short.cpp  listprinter_short.h  main.cpp  qfp_listdetail.cpp  qfp_listdetail.h  qfp_listdetail.ui  qfp_profilecard.cpp  qfp_strategycard.cpp  qfp_strategycard.h  qfp_strategycard.ui
QFleet/ShipView/: CMakeLists.txt  shipview.cpp  shipview.ui
QFleet/Shipyard/: CMakeLists.txt  arsenal.cpp  arsenal.h  arsenal.ui  customspecialdialog.cpp  customspecialdialog.h  dvsz_widget.h  main.cpp  scrapyard.cpp  scrapyard.h  scrapyard.ui  shipyard.cpp  shipyard.h  shipyard.ui
QFleet/Shipyard/build-Shipyard-gcc12-Debug/.qtc_clangd/: compile_commands.json
QFleet/common/: CMakeLists.txt  dvs_widget.cpp  dvs_widget.h  dvs_widget.ui  fileTypes.h  windowUtils.h
QFleet/compression/: CMakeLists.txt  compressor.cpp  compressor.h  constants.h  decompressor.cpp  decompressor.h
QFleet/compression/LZ4/: CMakeLists.txt
QFleet/htmlTemplates/: battleGroup.txt  groupHeader.txt  groupProfile.txt  listDetail.txt  listDetailShort.txt  shipProfile.txt  shortListTree.txt
ShipView/: CMakeLists.txt
Shipyard/: CMakeLists.txt  arsenal.ui  customspecialdialog.ui  main.cpp  scrapyard.cpp  scrapyard.h  shipyard.cpp  shipyard.h  shipyard.ui
